--- a/pom.xml
+++ b/pom.xml
@@ -42,14 +42,14 @@
   
 <distributionManagement>
     <repository>
-        <id>sym</id>
+        <id>devopsschool</id>
         <name>release softx</name>
-        <url>http://13.233.127.211:8081/nexus/content/repositories/broadall/</url>
+        <url>http://34.121.209.218:8081/repository/devops-release/</url>
     </repository>
     <snapshotRepository>
-        <id>sym</id>
+        <id>devopsschool</id>
         <name>snapshot softx</name>
-        <url>http://13.233.127.211:8081/nexus/content/repositories/broadall/</url>
+        <url>http://34.121.209.218:8081/repository/devops-snapshot/</url>
     </snapshotRepository>
 </distributionManagement>
 
